<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mynavigationdrawer.ui.home.HomeFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_wudhu"
        android:name="com.example.mynavigationdrawer.ui.wudhu.WudhuFragment"
        android:label="@string/menu_tata_cara_wudhu"
        tools:layout="@layout/fragment_wudhu" />

    <fragment
        android:id="@+id/nav_wajib"
        android:name="com.example.mynavigationdrawer.ui.wajib.WajibFragment"
        android:label="@string/menu_bacaan_sholat_wajib"
        tools:layout="@layout/fragment_wajib" />

    <fragment
        android:id="@+id/nav_sunnah"
        android:name="com.example.mynavigationdrawer.ui.sunnah.SunnahFragment"
        android:label="@string/menu_bacaan_sholat_sunnah"
        tools:layout="@layout/fragment_sunnah" />

    <fragment
        android:id="@+id/nav_dzikir"
        android:name="com.example.mynavigationdrawer.ui.dzikir.DzikirFragment"
        android:label="@string/menu_dzikir"
        tools:layout="@layout/fragment_dzikir" />
    <fragment
        android:id="@+id/nav_tahlil"
        android:name="com.example.mynavigationdrawer.ui.tahlil.TahlilFragment"
        android:label="@string/menu_tahlil"
        tools:layout="@layout/fragment_tahlil" />

</navigation>